Nice touches, like "mobile" logo on the landing page, to match "alpha" from the web app

--- a/midjourney-ios/Info.plist
+++ b/midjourney-ios/Info.plist
@@ -11,6 +11,7 @@
 		<string>DMSans-Thin.ttf</string>
 		<string>DMSans-Italic.ttf</string>
 		<string>DMSans-Light.ttf</string>
+		<string>FGNoelW00-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
